--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,10 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'org.mockito:mockito-inline:+'
     implementation 'com.github.JRJimenezReyes:entrada:1.0.3'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:+'
+    implementation 'org.slf4j:slf4j-simple:+'
+    // Driver para mongoDB
+    implementation 'org.mongodb:mongodb-driver-sync:+'
 }
 
 test {
@@ -35,6 +39,7 @@ application {
 run {
     standardInput = System.in
 }
+
 
 jar {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
